@@ -35,6 +35,16 @@ application {
     mainClass = 'debit.card.DebitCardApp'
 }
 
-tasks.named('test') {
+
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs.add("--enable-preview")
+}
+
+tasks.withType(Test).configureEach {
     useJUnitPlatform()
+    jvmArgs("--enable-preview")
+}
+
+tasks.withType(JavaExec).configureEach {
+    jvmArgs("--enable-preview")
 }
